tests/generators/generators.exp
class.js:4
  4:     yield ""; // error: string ~> number
               ^^ string. This type is incompatible with
  2:   *stmt_yield(): Generator<number, void, void> {
                                ^^^^^^ number

class.js:15
 15:       (b : string); // error: number ~> string
            ^ number. This type is incompatible with
 15:       (b : string); // error: number ~> string
                ^^^^^^ string

class.js:24
 24:     return ""; // error: string ~> number
                ^^ string. This type is incompatible with
 23:   *stmt_return_err(): Generator<void, number, void> {
                                           ^^^^^^ number

class.js:28
 28:     var x: boolean = yield 0; // error: number ~> boolean
                          ^^^^^^^ number. This type is incompatible with
 28:     var x: boolean = yield 0; // error: number ~> boolean
                ^^^^^^^ boolean

class.js:49
 49:       var x: number = yield; // error: string ~> number
                           ^^^^^^ string. This type is incompatible with
 49:       var x: number = yield; // error: string ~> number
                  ^^^^^^ number

class.js:67
 67:     var x: number = yield *inner(); // error: string ~> number
                         ^^^^^^^^^^^^^^ string. This type is incompatible with
 67:     var x: number = yield *inner(); // error: string ~> number
                ^^^^^^ number

class.js:98
 98: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                             ^ number. This type is incompatible with
 98: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                                 ^^^^^^ string

class.js:100
100: var infer_stmt_next = examples.infer_stmt().next(0).value; // error: number ~> boolean
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `next`
 28:     var x: boolean = yield 0; // error: number ~> boolean
                          ^^^^^^^ number. This type is incompatible with
 28:     var x: boolean = yield 0; // error: number ~> boolean
                ^^^^^^^ boolean

class.js:104
104:   (infer_stmt_next : boolean) // error: string ~> boolean
        ^^^^^^^^^^^^^^^ string. This type is incompatible with
104:   (infer_stmt_next : boolean) // error: string ~> boolean
                          ^^^^^^^ boolean

class.js:122
122:   (x : number) // error: string ~> number
        ^ string. This type is incompatible with
122:   (x : number) // error: string ~> number
            ^^^^^^ number

class.js:125
125: examples.delegate_next_iterable([]).next(""); // error: Iterator has no next value
                                              ^^ string. This type is incompatible with
494: type Iterator<+T> = $Iterator<T,void,void>;
                                          ^^^^ undefined. See lib: <BUILTINS>/core.js:494

class.js:128
128:   (x : string) // error: number ~> string
        ^ number. This type is incompatible with
128:   (x : string) // error: number ~> string
            ^^^^^^ string

class_failure.js:5
  5:     var x: boolean = yield 0; // error: number ~> boolean
                          ^^^^^^^ number. This type is incompatible with
  5:     var x: boolean = yield 0; // error: number ~> boolean
                ^^^^^^^ boolean

class_failure.js:12
 12: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                             ^ number. This type is incompatible with
 12: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                                 ^^^^^^ string

class_failure.js:14
 14: var infer_stmt_next = examples.infer_stmt().next(0).value; // error: number ~> boolean
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `next`
  5:     var x: boolean = yield 0; // error: number ~> boolean
                          ^^^^^^^ number. This type is incompatible with
  5:     var x: boolean = yield 0; // error: number ~> boolean
                ^^^^^^^ boolean

class_failure.js:19
 19:   (infer_stmt_next : boolean) // error: string ~> boolean
        ^^^^^^^^^^^^^^^ string. This type is incompatible with
 19:   (infer_stmt_next : boolean) // error: string ~> boolean
                          ^^^^^^^ boolean

generators.js:3
  3:   yield ""; // error: string ~> number
             ^^ string. This type is incompatible with
  1: function *stmt_yield(): Generator<number, void, void> {
                                       ^^^^^^ number

generators.js:14
 14:     (b : string); // error: number ~> string
          ^ number. This type is incompatible with
 14:     (b : string); // error: number ~> string
              ^^^^^^ string

generators.js:23
 23:   return ""; // error: string ~> number
              ^^ string. This type is incompatible with
 22: function *stmt_return_err(): Generator<void, number, void> {
                                                  ^^^^^^ number

generators.js:30
 30: for (var x of infer_stmt()) { (x : string) } // error: number ~> string
                                    ^ number. This type is incompatible with
 30: for (var x of infer_stmt()) { (x : string) } // error: number ~> string
                                        ^^^^^^ string

generators.js:31
 31: var infer_stmt_next = infer_stmt().next(0).value; // error: number ~> boolean
                           ^^^^^^^^^^^^^^^^^^^^ call of method `next`
 27:   var x: boolean = yield 0;
                        ^^^^^^^ number. This type is incompatible with
 27:   var x: boolean = yield 0;
              ^^^^^^^ boolean

generators.js:35
 35:   (infer_stmt_next : boolean) // error: string ~> boolean
        ^^^^^^^^^^^^^^^ string. This type is incompatible with
 35:   (infer_stmt_next : boolean) // error: string ~> boolean
                          ^^^^^^^ boolean

generators.js:65
 65:     var x: number = yield; // error: string ~> number
                         ^^^^^^ string. This type is incompatible with
 65:     var x: number = yield; // error: string ~> number
                ^^^^^^ number

generators.js:79
 79:   (x : number) // error: string ~> number
        ^ string. This type is incompatible with
 79:   (x : number) // error: string ~> number
            ^^^^^^ number

generators.js:87
 87:   var x: number = yield *inner(); // error: string ~> number
                       ^^^^^^^^^^^^^^ string. This type is incompatible with
 87:   var x: number = yield *inner(); // error: string ~> number
              ^^^^^^ number

generators.js:94
 94: delegate_next_iterable([]).next(""); // error: Iterator has no next value
                                     ^^ string. This type is incompatible with
494: type Iterator<+T> = $Iterator<T,void,void>;
                                          ^^^^ undefined. See lib: <BUILTINS>/core.js:494

generators.js:100
100:   (x : string) // error: number ~> string
        ^ number. This type is incompatible with
100:   (x : string) // error: number ~> string
            ^^^^^^ string

generators.js:128
128:   (multiple_return_result.value: void); // error: number|string ~> void
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
128:   (multiple_return_result.value: void); // error: number|string ~> void
                                      ^^^^ undefined

generators.js:128
128:   (multiple_return_result.value: void); // error: number|string ~> void
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
128:   (multiple_return_result.value: void); // error: number|string ~> void
                                      ^^^^ undefined

return.js:5
  5:   (ret.value: void); // error: string | number ~> void
        ^^^^^^^^^ number. This type is incompatible with
  5:   (ret.value: void); // error: string | number ~> void
                   ^^^^ undefined

return.js:5
  5:   (ret.value: void); // error: string | number ~> void
        ^^^^^^^^^ string. This type is incompatible with
  5:   (ret.value: void); // error: string | number ~> void
                   ^^^^ undefined

return.js:20
 20:   (refuse_return_result.value: string); // error: number | void ~> string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 20:   (refuse_return_result.value: string); // error: number | void ~> string
                                    ^^^^^^ string

return.js:20
 20:   (refuse_return_result.value: string); // error: number | void ~> string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined. This type is incompatible with
 20:   (refuse_return_result.value: string); // error: number | void ~> string
                                    ^^^^^^ string

throw.js:11
 11:   (catch_return_value : string); // error: number ~> string
        ^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 11:   (catch_return_value : string); // error: number ~> string
                             ^^^^^^ string

throw.js:24
 24:   (yield_return_value: string); // error: number ~> string
        ^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 24:   (yield_return_value: string); // error: number ~> string
                            ^^^^^^ string


Found 35 errors
